# Monte-Carlo-Options-Pricer

./: .gitignore  AI_DETECTION_CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_STEPS.md  Dockerfile  FINAL_CHECKLIST.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.sh  QUICK_DEPLOY.md  README.md  START_HERE.md  SUMMARY.md  clean_and_push.sh  docker-compose.yml  final_clean.sh  fix_and_push.sh  pyproject.toml  requirements.txt  setup.py  verify_before_push.sh
api/: main.py  models.py
api/static/: index.html
examples/: basic_usage.py  exotic_options.py
src/mc_pricer/: __init__.py
src/mc_pricer/core/: __init__.py  engine.py  enums.py  parameters.py
src/mc_pricer/models/: __init__.py  black_scholes.py  heston.py
src/mc_pricer/payoffs/: __init__.py  base.py  european.py  exotic.py
src/mc_pricer/utils/: __init__.py  benchmarking.py
src/mc_pricer/variance_reduction/: __init__.py  antithetic.py  control_variate.py  quasi_random.py
tests/: test_engine.py
